# flux-runtime

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ABSTRACTION.md  CAPABILITY.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TUTORIAL.md  pyproject.toml  worklog.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  publish.yml  release.yml
docs/: INDEX.md  ISA-V3-DRAFT.md  ISA-V3-FULL-DRAFT.md  ISA_UNIFIED.md  OPCODE-RECONCILIATION.md  TRACING.md  ability-transfer-round2-synthesis.md  ability-transfer-round3-grounding.md  advanced-opcodes-spec.md  agent-bootcamp-research.md  async-primitives-spec.md  async-temporal-primitives-spec.md  benchmark-report-2026-04-12-v2.md  benchmark-report-2026-04-12.md  bootcamp-research-v2.md  conformance-cross-runtime-report.md  conformance-report-2026-04-12.md  cuda-kernel-design.md  developer-guide.md  embedding-search-opcode-spec.md  fishinglog-integration-proposal.md  fleet-communication-topology-analysis.md  fleet-communication-topology.md  fleet-health-dashboard.json  git-native-a2a-survey.md  graph-traversal-opcode-spec.md  isa-v3-address-map.md  isa-v3-compressed-format-spec.md  isa-v3-escape-prefix-spec.md  lighthouse-keeper-architecture.md  lora-agent-ability-pipeline.md  lora-agent-compression.md  mechanic-cron-design.md  multi-agent-debugging-patterns.md  probabilistic-sampling-opcode-spec.md  security-primitives-spec.md  structured-data-opcodes-spec.md  temporal-primitives-spec.md  tender-architecture.md  user-guide.md  (+1 more)
docs/agent-training/: README.md
docs/bootcamp/: README.md  module-01-bytecode-basics.md  module-02-control-flow.md  module-03-a2a-protocol.md  module-04-memory-regions.md  module-05-fir-pipeline.md  module-06-fleet-patterns.md
docs/fishinglog-flux-bridge/: README.md  confidence-engine.ts  flux-bridge.ts  flux-opcodes.ts  flux-vm-mini.ts
docs/knowledge-federation/: FEDERATION-README.md  knowledge-base.json  knowledge-query.py
docs/research/: agent_orchestration.md  bootstrap_and_meta.md  creative_use_cases.md  memory_and_learning.md  simulation_and_prediction.md
docs/roadmap/: ISA_V3_AND_FLEET_CONVERGENCE.md
examples/: 02_polyglot_add.md  03_fibonacci.md  04_agent_handshake.md  05_bytecode_playground.py  10_reverse_python.py  11_reverse_c.py  12_migration_guide.py  QUICKSTART.md  README.md  counter.flx  deadband.flx  factorial.flx  fibonacci.flx  flux_fleet_calc.py  flux_fleet_sim.py  hello.flx  hello_world.md  memory_demo.flx  register_math.flx  stack_demo.flx
for-fleet/: health-check-2026-04-12_171937.json
playground/: index.html
research/reverse-actualization/: 05-readability-style-guide.md
showcase/: README.md  compile_and_run.py  run_all.sh
src/flux/: cli.py  (+8 more)
tests/: conformance_runner.py  conftest.py  cross_impl.flx  run_expanded_conformance.py  test_adaptive.py  test_argumentation.py  test_beachcomb.py  test_bytecode.py  test_conformance.py  test_conformance_expanded.py  test_contradiction_detector.py  test_cross_assembler.py  test_debugger.py  test_docs.py  test_fir.py  test_ghost_loader.py  test_integration.py  test_isa_unified.py  test_isa_v2.py  test_isa_v3_opcodes.py  test_l0_scrubber.py  test_marine_physics.py  test_mega.py  test_modules.py  test_optimizer.py  test_parser.py  test_primitives.py  test_reload.py  test_reverse.py  test_runtime.py  test_schema.py  test_security.py  test_signal_vm_integration.py  test_synthesis.py  test_tiles.py  test_tracer.py  test_vocab_signal.py
tools/: benchmark_report.json  benchmark_results.json  benchmark_runner.py  benchmark_suite.py  conformance_cross_runtime.json  conformance_report.json  conformance_report_c_expanded.json  conformance_report_c_original.json  conformance_report_expanded.json  conformance_report_python_expanded.json  conformance_report_rust_expanded.json  conformance_report_rust_original.json  conformance_runner.py  fleet_config.json  flux_migrate_demo.py  git_archaeology.py  semantic_router.py  witness_mark_linter.py
(+127 files in other folders)
