# ── FLUX Runtime ──────────────────────────────────────────────────────────────
# pyproject.toml — PEP 621 build configuration
# Build: pip install -e ".[dev]"   (editable install with dev tooling)
# Run:  flux compile input.c -o output.bin
#       python -m flux run bytecode.bin

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-runtime"
version = "0.1.0"
description = "FLUX — Fluid Language Universal eXecution: A Self-Assembling, Self-Improving Runtime for Agent-First Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SuperInstance" },
]
keywords = [
    "agent",
    "bytecode",
    "compiler",
    "hot-reload",
    "jit",
    "polyglot",
    "runtime",
    "self-improving",
    "vm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Emulators",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SuperInstance/flux-runtime"
Documentation = "https://github.com/SuperInstance/flux-runtime#readme"
Repository = "https://github.com/SuperInstance/flux-runtime"
"Bug Tracker" = "https://github.com/SuperInstance/flux-runtime/issues"

[project.scripts]
flux = "flux.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

# ── coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["flux"]
branch = true
omit = [
    "flux/__main__.py",
    "flux/cli.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "raise NotImplementedError",
    "...",
]

[tool.coverage.html]
directory = "htmlcov"

# ── black ─────────────────────────────────────────────────────────────────────

[tool.black]
target-version = ["py310"]
line-length = 88
skip-string-normalization = false

# ── ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["flux"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert allowed in tests
]

# ── mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["flux.bytecode.*", "flux.vm.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
